--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
-    "@babel/plugin-proposal-decorators": "^7.14.2",
+    "@babel/plugin-proposal-decorators": "^7.14.5",
+    "@babel/preset-typescript": "^7.14.5",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
     "@types/react-native-sqlite-storage": "^5.0.0",
     "axios": "^0.21.1",
     "babel-plugin-inline-import": "^3.0.0",
+    "babel-plugin-module-resolver": "^4.1.0",
+    "babel-plugin-transform-typescript-metadata": "^0.3.2",
     "mobx": "^6.3.2",
     "mobx-react": "^7.2.0",
     "react": "17.0.1",
@@ -27,7 +30,8 @@
     "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.3.0",
-    "react-native-sqlite-storage": "^5.0.0"
+    "react-native-sqlite-storage": "^5.0.0",
+    "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
